--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,17 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   my_new_project:
-    # Applies to all files under models/example/
-    example:
+    # Applies to all models under models/transform/
+    Transform:
       +materialized: table
+      +schema: gold  # Replace 'target_schema' with your desired schema name
+
+    # Optional: specific configuration for models in the models/example/ folder
+    staging:
+      +materialized: table
+      +schema: silver  
+
+    raw_data:
+      +materialized: table
+      +schema: bronze  
+
