adding test configs

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -46,6 +46,11 @@ models:
     staging:
       +materialized: table
       +schema: silver   
+  dbt_dataquality:
+    sources:
+      +tags: sources
+    tests:
+      +tags: tests
 
 
       
