--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-/target/
-/packages/
-/logs/
+# you shouldn't commit these into source control
+# these are the default directory names, adjust/add to fit your needs
+target/
+dbt_packages/
+logs/
