--- a/models/sources.yml
+++ b/models/sources.yml
@@ -1,24 +1,92 @@
 version: 2
 
 sources:
-  - name: dbt_dataquality
-    database: "{{ var('dbt_dataquality_database', target.database) }}"
-    schema: "{{ var('dbt_dataquality_schema', target.schema) }}"  
-    loader: dbt macro - dbt_dataquality.load_internal_stage
-    description: sources.json and run_results.json raw data
+  - name: raw_data
+    schema: bronze # Ensure this matches your actual schema name
+    description: "Source for dbt database"
+
 
     tables:
-      - name: stg_dbt_dataquality
-        identifier: "{{ var('dbt_dataquality_table', 'stg_dbt_dataquality') }}"
-        description: Holds the raw payloads from sources.json and run_results.json
+      - name: fact_resource_utilization
+        description: "Table for resource utilization data"
         columns:
-          - name: upload_timestamp_utc
-            description: The UTC time when the dbt log was uploaded (sources.json or run_results.json) 
-          - name: filename
-            description: The file name of the dbt log uploaded (sources.json or run_results.json) 
-          - name: payload
-            description: The actual json payload of the dbt log uploaded (sources.json or run_results.json) 
-          - name: payload_timestamp_utc
-            description: Same as the element "generated_at" as found in the dbt logs (sources.json or run_results.json) 
-          - name: payload_id
-            description: Same as the element "invocation_id" as found in the dbt logs (sources.json or run_results.json) 
+          - name: resource_utilization_id
+            description: "Primary key for resource utilization"
+            tests:
+              - unique
+              - not_null
+          - name: time_id
+            tests:
+              - not_null
+          - name: employee_id
+            tests:
+              - not_null
+          - name: project_id
+            tests:
+              - not_null
+          - name: department_id
+            tests:
+              - not_null
+          - name: utilization_hours
+          - name: utilization_percentage
+          - name: active
+
+      - name: dim_time
+        description: "Table for time dimensions"
+        columns:
+          - name: time_id
+            description: "Primary key for time dimension"
+            tests:
+              - unique
+              - not_null
+          - name: date
+          - name: day_of_week
+          - name: month
+          - name: quarter
+          - name: year
+          - name: week_of_year
+
+      - name: dim_employee
+        description: "Table for employee details"
+        columns:
+          - name: employee_id
+            description: "Primary key for employee"
+            tests:
+              - unique
+              - not_null
+          - name: employee_name
+          - name: job_title
+          - name: hire_date
+          - name: department_id
+          - name: location
+
+      - name: dim_project
+        description: "Table for project details"
+        columns:
+          - name: project_id
+            description: "Primary key for project"
+            tests:
+              - unique
+              - not_null
+          - name: project_name
+          - name: start_date
+          - name: end_date
+          - name: project_manager_id
+          - name: budget
+
+      - name: dim_department
+        description: "Table for department details"
+        columns:
+          - name: department_id
+            description: "Primary key for department"
+            tests:
+              - unique
+              - not_null
+          - name: department_name
+            description: "Name of the department"
+          - name: location
+            description: "Location of the department"
+          - name: head_of_department_id
+            description: "ID of the head of the department"
+            tests:
+              - not_null
